--- a/templates/emails/onboarding.html
+++ b/templates/emails/onboarding.html
@@ -32,7 +32,7 @@
             
             <p>Cheers,<br>
             The Decipherworld Team<br>
-            <a href="mailto:hello@decipherworld.com">hello@decipherworld.com</a></p>
+            <a href="mailto:customerservice@decipherworld.com">customerservice@decipherworld.com</a></p>
         </div>
     </div>
 </body>
