--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -108,8 +108,8 @@
                         <div class="space-y-2">
                             <p class="flex items-center">
                                 <span class="text-purple-600 mr-2">📧</span>
-                                <a href="mailto:hello@decipherworld.com" class="text-purple-600 hover:underline">
-                                    hello@decipherworld.com
+                                <a href="mailto:customerservice@decipherworld.com" class="text-purple-600 hover:underline">
+                                    customerservice@decipherworld.com
                                 </a>
                             </p>
                             <p class="text-gray-600 text-sm">
