--- a/templates/home/courses.html
+++ b/templates/home/courses.html
@@ -278,7 +278,7 @@
                     <span class="hidden xs:inline">Book Free Demo</span>
                     <span class="xs:hidden">Book Demo</span>
                 </a>
-                <a href="mailto:hello@decipherworld.com" class="btn btn-outline btn-secondary btn-lg px-8 hover:btn-secondary shadow-lg hover:shadow-xl transition-all duration-300">
+                <a href="mailto:customerservice@decipherworld.com" class="btn btn-outline btn-secondary btn-lg px-8 hover:btn-secondary shadow-lg hover:shadow-xl transition-all duration-300">
                     <i class="fas fa-envelope mr-2"></i>
                     <span class="hidden xs:inline">Contact Us</span>
                     <span class="xs:hidden">Contact</span>
