--- a/templates/home/teachers.html
+++ b/templates/home/teachers.html
@@ -358,7 +358,7 @@
                     <span class="hidden xs:inline">Enroll Now</span>
                     <span class="xs:hidden">Enroll</span>
                 </a>
-                <a href="mailto:hello@decipherworld.com" class="btn btn-outline btn-white btn-lg px-8 hover:bg-white/10 shadow-lg hover:shadow-xl transition-all duration-300">
+                <a href="mailto:customerservice@decipherworld.com" class="btn btn-outline btn-white btn-lg px-8 hover:bg-white/10 shadow-lg hover:shadow-xl transition-all duration-300">
                     <i class="fas fa-envelope mr-2"></i>
                     <span class="hidden xs:inline">Schedule Consultation</span>
                     <span class="xs:hidden">Contact</span>
